// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should enable sort order select when sort field provided 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Tooltip fields"
          id="xpack.maps.esSearch.tooltipsTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <TooltipSelector
      fields={null}
      onChange={[Function]}
      tooltipFields={Array []}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Sorting"
          id="xpack.maps.esSearch.sortTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Field"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select sort field"
        value="@timestamp"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Order"
      labelType="label"
    >
      <EuiSelect
        compressed={true}
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "ascending",
              "value": "asc",
            },
            Object {
              "text": "descending",
              "value": "desc",
            },
          ]
        }
        value="DESC"
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Scaling"
          id="xpack.maps.esSearch.scaleTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiRadioGroup
        idSelected="LIMIT"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "LIMIT",
              "label": "Limit results to 10000.",
            },
            Object {
              "id": "TOP_HITS",
              "label": "Show top hits per entity.",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiSwitch
        checked={true}
        compressed={true}
        label="Dynamically filter for data in the visible map area"
        onChange={[Function]}
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;

exports[`should render top hits form when scaling type is TOP_HITS 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Tooltip fields"
          id="xpack.maps.esSearch.tooltipsTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <TooltipSelector
      fields={null}
      onChange={[Function]}
      tooltipFields={Array []}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Sorting"
          id="xpack.maps.esSearch.sortTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Field"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select sort field"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Order"
      labelType="label"
    >
      <EuiSelect
        compressed={true}
        disabled={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "ascending",
              "value": "asc",
            },
            Object {
              "text": "descending",
              "value": "desc",
            },
          ]
        }
        value="DESC"
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Scaling"
          id="xpack.maps.esSearch.scaleTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiRadioGroup
        idSelected="TOP_HITS"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "LIMIT",
              "label": "Limit results to 10000.",
            },
            Object {
              "id": "TOP_HITS",
              "label": "Show top hits per entity.",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiSwitch
        checked={true}
        compressed={true}
        label="Dynamically filter for data in the visible map area"
        onChange={[Function]}
      />
    </EuiFormRow>
    <EuiHorizontalRule
      margin="xs"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Entity"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select entity field"
        value="trackId"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Documents per entity"
      labelType="label"
    >
      <ValidatedRange
        compressed={true}
        data-test-subj="layerPanelTopHitsSize"
        max={100}
        min={1}
        onChange={[Function]}
        showInput={true}
        showLabels={true}
        showRange={true}
        step={1}
        value={1}
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;

exports[`should render update source editor 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Tooltip fields"
          id="xpack.maps.esSearch.tooltipsTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <TooltipSelector
      fields={null}
      onChange={[Function]}
      tooltipFields={Array []}
    />
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Sorting"
          id="xpack.maps.esSearch.sortTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Field"
      labelType="label"
    >
      <SingleFieldSelect
        compressed={true}
        fields={null}
        onChange={[Function]}
        placeholder="Select sort field"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="columnCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Order"
      labelType="label"
    >
      <EuiSelect
        compressed={true}
        disabled={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "ascending",
              "value": "asc",
            },
            Object {
              "text": "descending",
              "value": "desc",
            },
          ]
        }
        value="DESC"
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Scaling"
          id="xpack.maps.esSearch.scaleTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="m"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiRadioGroup
        idSelected="LIMIT"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "LIMIT",
              "label": "Limit results to 10000.",
            },
            Object {
              "id": "TOP_HITS",
              "label": "Show top hits per entity.",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiSwitch
        checked={true}
        compressed={true}
        label="Dynamically filter for data in the visible map area"
        onChange={[Function]}
      />
    </EuiFormRow>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
